<resources>
    <string name="app_name">SJDMNTS Document Request</string>
    <string name="login">Login</string>
    <string name="deped_logo">DepEd Logo</string>
    <string name="trade_logo">Trade Logo</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="admin">Admin</string>
    <string name="o">O%</string>
    <string name="app_desc">Document Request</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_login">\nLogin</string>
    <string name="c_login">Login</string>
    <string name="c_sign_up">Sign Up</string>
    <string name="forgot_pass_q">Forgot your password?</string>
    <string name="user_signup">\nSign Up</string>
    <string name="full_name">Full Name</string>
    <string name="c_next">Next</string>
    <string name="back">Back</string>
    <string name="form_137">Form 137</string>
    <string name="certified_copy_of_form_138">CTC of Form 138</string>
    <string name="upper_percent">Upper Percent</string>
    <string name="good_moral">Good Moral</string>
    <string name="document_request">Document\nRequest</string>
    <string name="next">Next</string>
    <string name="certificate_of_enrollment">Certificate of Enrollment</string>
    <string name="app_logo">app logo</string>
    <string name="lrn">Learner\'s Reference Number</string>
    <string name="a_lrn">LRN</string>
    <string name="rqstdoc_hint">Click to request documents</string>
    <string name="c_rqstdoc">Request Documents</string>
    <string name="c_log_out">Log out</string>
    <string name="c_reset_password">Reset Password</string>
    <string name="n_app_name">SJDMNTS\nDocument Request</string>
    <string name="resend_email_verification">Resend email verification</string>
    <string name="b_menu">Menu button</string>
    <string name="about_us">About Us</string>
    <string name="c_leader">Leader</string>
    <string name="members">Members</string>
    <string name="leader_name">Jorym Renz Arias</string>
    <string name="members_name">Chynna Swanne Bandolin\nJule Ashly-K Catarungan\nMarian Jade Gayanilo\nHelena Mae Gura\nDesserie Rivera</string>
    <string name="c_section">Section</string>
    <string name="c_documents">Documents</string>
    <string name="c_profile">Profile</string>
    <string name="save">Save</string>
    <string name="c_request">Request</string>
    <string name="c_cancel">Cancel</string>
    <string name="c_create">Create</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="create_new_account">Create new account</string>
    <string name="create_an_account">Create an account</string>
    <string name="done">Done</string>
    <string name="c_date_requested">Date Requested</string>

    <string-array name="sections">
        <item>Amber</item>
        <item>Aquamarine</item>
        <item>Diamond</item>
        <item>Emerald</item>
        <item>Garnet</item>
        <item>Onyx</item>
        <item>Opal</item>
        <item>Pearl</item>
        <item>Peridot</item>
        <item>Ruby</item>
        <item>Sapphire</item>
        <item>Topaz</item>
        <item>Zircon</item>
    </string-array>
</resources>