<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jetbrainsmono_regular"
        android:text="@string/login"
        android:textSize="48sp"
        app:fontFamily="@font/jetbrainsmono_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166" />

    <ImageView
        android:id="@+id/imgDepedLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/deped_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/deped_logo" />

    <ImageView
        android:id="@+id/imgTradeLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/trade_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sjdmnts_logo" />

    <Button
        android:id="@+id/btnStudent"
        android:layout_width="271dp"
        android:layout_height="81dp"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="27dp"
        android:text="@string/student"
        android:textSize="30sp"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_student_icon"
        app:layout_constraintBottom_toTopOf="@+id/btnTeacher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnTeacher"
        android:layout_width="271dp"
        android:layout_height="81dp"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="29dp"
        android:text="@string/teacher"
        android:textSize="30sp"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_teacher_icon"
        app:layout_constraintBottom_toTopOf="@+id/btnAdmin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAdmin"
        android:layout_width="271dp"
        android:layout_height="81dp"
        android:layout_marginStart="89dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="103dp"
        android:text="@string/admin"
        android:textSize="30sp"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_admin_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>